# QCoreApplication_quit_example

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp  rial.cpp  rial.h
.github/workflows/: Links.yml
QCoreApplication_quit_SIGINT_example/: CMakeLists.txt  MainClass.cpp  MainClass.h  Rial.cpp  Rial.h  main.cpp  rial.cpp  rial.h
QCoreApplication_quit_example/: CMakeLists.txt  MainClass.cpp  MainClass.h  Rial.cpp  Rial.h  main.cpp  rial.cpp
